# turing-lang

./: CMakeLists.txt  README.md  TUTORIAL.md
examples/: NOT.tl  succ.tl
include/: Interpret.hpp  Machine.hpp  Rule.hpp  State.hpp
src/: Interpret.cpp  Machine.cpp  State.cpp  main.cpp
